@@ -20,6 +20,7 @@
 * Added timezone support
 * Fixed a bug where BotNet would leak in to its own profile tab (Issue 75)
 * Fixed a bug that prevented using commands while disconnected (Issue 79)
+* Started an 'addalias' command (Issue 82)
 
 2.0.6 (r1400) 2008-04-21:
 * Added auto-rejoin afer being kicked (Issue 52)
